test: Use conditional forward/reroute views to properly validate flag propagation
The previous tests passed even without the fix because
refreshCurrentRoute navigated directly to the forward target,
bypassing the forward/reroute code path entirely.

The new tests use conditional forwarding/rerouting views: first
navigate without redirect (so locationForRefresh stays on the
original route), then enable forwarding/rerouting and call
refreshCurrentRoute(true). This forces the redirect to trigger
during refresh, exercising the getNavigationEvent() code path
where flags must be propagated. Constructor counting on the
shared layout verifies that the layout is recreated twice (once
by refresh, once by forward/reroute).